--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ body {
 }
 
 ul {
+  /* padding: 0; */
+  margin: 0;
   list-style: none;
 }
 
@@ -126,21 +128,26 @@ ul {
 /* Кнопка */
 
 .hero {
-  text-align: center;
   background-color: #2f303a;
   text-align: center;
 }
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+
+  background-color: tomato; /*для оформления ерунды, потом удалить*/
+
   color: var(--second-accent-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06;
+  letter-spacing: 0.06em;
   font-size: Black;
   text-transform: uppercase;
 }
 .hero-button {
+  margin-bottom: 210px;
+  border: 1px solid transparent; /*делает бордер прозрачным*/
   border-radius: 4px;
   padding: 10px 32px;
   min-width: 200px;
@@ -152,27 +159,41 @@ ul {
   font-size: 16px;
   line-height: 1.8;
   font-weight: 700;
-  letter-spacing: 0.06;
-  text-align: center;
-  /* border-color: blue; */
+  letter-spacing: 0.06em;
   cursor: pointer;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  color: var(--title-text-color);
+  color: var(--second-accent-color);
 }
 
 /* Кнопки для портфолио */
 
 .button-portfolio {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
+  min-width: 73px;
+
+  display: inline-block;
   background-color: var(--accent-color);
-  color: var(--second-bg-color);
+  color: var(--second-accent-color);
   font-size: 16px;
+  line-height: 1.6;
   font-weight: 500;
+  letter-spacing: 0.03em;
+  text-align: center;
+  cursor: pointer;
 }
 
 .button {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
+  min-width: 73px;
+
+  display: inline-block;
   color: var(--title-text-color);
   background-color: var(--second-bg-color);
   font-family: inherit;
@@ -180,7 +201,8 @@ ul {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6;
-  letter-spacing: 0.03;
+  letter-spacing: 0.03em;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -192,11 +214,17 @@ ul {
 
 /* Преимущества */
 
+.feature-title {
+  /* background-color: tomato; /*для оформления ерунды, потом удалить*/
+}
+
 .feature-list-text {
+  margin-top: 0;
+  padding-top: 94px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
-  letter-spacing: 0.03;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
@@ -205,30 +233,33 @@ ul {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
-  letter-spacing: 0.03;
+  letter-spacing: 0.03em;
 }
 
 /* Примеры работ */
 
 .section-title {
+  margin-top: 0;
+  padding-top: 0;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
+  text-align: center;
 }
 
 /* Команда */
 
 .team {
-  background-color: #f5f4fa;
+  background-color: var(--second-bg-color);
 }
 
 .team-title {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.2;
-  text-align: Center;
-  vertical-align: Top;
-  letter-spacing: 0.03;
+  text-align: center;
+  vertical-align: top;
+  letter-spacing: 0.03em;
 }
 
 .section-description {
@@ -237,7 +268,7 @@ ul {
   line-height: 1.2;
   text-align: center;
   vertical-align: top;
-  letter-spacing: 0.03;
+  letter-spacing: 0.03em;
 }
 
 /* Футер */
