--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   box-sizing: border-box;
 }
 
@@ -6,7 +6,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-}
+} */
 
 :root {
   --primary-text-color: #757575;
@@ -31,6 +31,22 @@ html {
   overflow: hidden;
 }
 
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+} */
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   margin: 0;
   background-color: var(--second-accent-color);
@@ -44,6 +60,8 @@ body {
 }
 
 ul {
+  display: flex;
+
   padding: 0;
   margin: 0;
   list-style: none;
@@ -51,6 +69,11 @@ ul {
 
 /* Логотип */
 .logo {
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  /* width: 145px; */
   color: var(--accent-color);
   font-family: Raleway, cursive;
   font-weight: 700;
@@ -71,23 +94,64 @@ ul {
 
 /* Навигация */
 
+/* .container-logo {
+  display: flex;
+  margin: 0;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  outline: 2px solid blue;
+} */
+
 .container {
+  display: flex;
+  flex-wrap: wrap;
+
   margin-left: auto;
   margin-right: auto;
-  /* width: 1170px; */
-  width: 530px;
-  outline: 2px solid blue;
-}
-/* Контакты в меню */
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 
-.container-contacts {
+  /* outline: 2px solid blue; */
+}
+
+.container-nav {
+  display: flex;
+  align-items: center;
+}
+/* .container-contacts {
   margin-left: auto;
   margin-right: auto;
   width: 310px;
+
   outline: 2px solid blue;
+} */
+
+.site-nav {
+  display: flex;
+  margin-left: 93px;
 }
 
+/* .site-nav .item {
+ background-color: lightblue;
+}  */
+
+/* .site-nav .item:last-child {
+  margin-right: 0;
+} */
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
+/* .site-nav .item:not(:last-child) {
+  margin-right: 50px;
+} */
+
 .site-nav .link {
+  display: block;
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -101,11 +165,27 @@ ul {
 }
 
 .site-nav .link.current {
+  display: block;
+
   color: var(--accent-color);
 }
 
 /* Контакты в меню*/
+.contacts {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.contacts .item + .item {
+  margin-left: 50px;
+}
+
 .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--main-text-color);
   font-style: normal;
   text-decoration: none;
@@ -132,6 +212,8 @@ ul {
   text-align: center;
 }
 .hero-title {
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 0;
   margin-bottom: 30px;
 
@@ -144,7 +226,9 @@ ul {
   text-transform: uppercase;
 }
 .hero-button {
-  margin-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-bottom: 200px; */
   border: 1px solid transparent; /*делает бордер прозрачным*/
   border-radius: 4px;
   padding: 10px 32px;
@@ -168,14 +252,34 @@ ul {
 }
 
 /* Кнопки для портфолио */
+.container-button {
+  padding-top: 94px;
+
+  justify-content: center;
+  align-items: center;
+
+  width: 1200px;
+
+  /* display: flex;
+  flex-wrap: wrap; */
+
+  /* margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px; */
+
+  /* outline: 2px solid blue; */
+}
 
 .button-portfolio {
+  display: inline-block;
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 6px 22px;
   min-width: 73px;
+  margin-right: 8px;
 
-  display: inline-block;
   background-color: var(--accent-color);
   color: var(--second-accent-color);
   font-size: 16px;
@@ -187,12 +291,13 @@ ul {
 }
 
 .button {
+  display: inline-block;
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 6px 22px;
   min-width: 73px;
+  margin-right: 8px;
 
-  display: inline-block;
   color: var(--title-text-color);
   background-color: var(--second-bg-color);
   font-family: inherit;
@@ -213,14 +318,22 @@ ul {
 
 /* Преимущества */
 
-.feature-title {
-  /* background-color: tomato; /*для оформления ерунды, потом удалить*/
+.features {
+  margin-right: 30px;
 }
 
+.features:nth-last-child(4n) {
+  margin-left: 0;
+}
+
+/* .feature-title {
+  background-color: tomato; /*для оформления ерунды, потом удалить
+} */
+
 .feature-list-text {
+  margin-bottom: 10px;
   margin-top: 0;
-  margin-bottom: 26px;
-  /* padding-top: 0; */
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -229,7 +342,9 @@ ul {
 }
 
 .feature-list-description {
+  margin-top: o;
   margin-bottom: 0;
+
   color: var(--primary-text-color);
   font-size: 14px;
   font-weight: 400;
@@ -240,26 +355,56 @@ ul {
 /* Примеры работ */
 
 .section-title {
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 94px;
   padding-bottom: 50px;
+
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
-  text-align: center;
+}
+
+.section-img {
+  margin-left: 30px;
+}
+
+.section-img:nth-last-child(3n) {
+  margin-left: 0;
 }
 
 /* Команда */
 
 .team {
+  text-align: center;
   background-color: var(--second-bg-color);
+}
+
+.team-img {
+  margin-left: 30px;
+}
+
+.team-img:nth-last-child(4n) {
+  margin-left: 0;
+}
+
+.team-container {
+  /* outline: 1px solid blue; */
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  margin-top: 0;
+
+  background-color: var(--second-accent-color);
 }
 
 .team-title {
   margin: 0 0 0 0;
   padding-top: 30px;
   padding-bottom: 10px;
+
   font-size: 16px;
   font-weight: 500;
   line-height: 1.2;
@@ -279,6 +424,7 @@ ul {
   margin: 0 0 0 0;
   padding-top: 10px;
   padding-bottom: 30px;
+
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.2;
@@ -290,10 +436,16 @@ ul {
 /* Футер */
 
 .footer-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
 .logo-footer {
+  padding-bottom: 20px;
+  width: 145px;
+  height: 31px;
+
   color: var(--accent-color);
   font-family: Raleway, cursive;
   font-weight: 700;
@@ -304,12 +456,44 @@ ul {
 }
 
 .footer-section-logo {
+  width: 145px;
+  height: 31px;
   color: var(--second-accent-color);
 }
 
+.address {
+  margin-top: 20px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+
+  font-weight: normal;
+  font-style: normal;
+  color: var(--title-text-color);
+  font-size: 14px;
+  line-height: 1.7;
+
+  letter-spacing: 0.03em;
+}
+
+.address-location {
+  color: var(--second-accent-color);
+}
+
+.address-location:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .footer-section-contact {
+  display: block;
+
+  margin-left: auto;
+
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-section-contact:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer-section-contact:hover,
@@ -317,29 +501,35 @@ ul {
   color: var(--second-accent-color);
 }
 
-.address-location {
-  color: var(--second-accent-color);
-}
-
-.address {
-  font-style: normal;
-  color: var(--title-text-color);
-  font-size: 14px;
-  line-height: 1.7;
-  /* text-align: left;
-  vertical-align: top; */
-  letter-spacing: 0.03em;
-}
-
 /* Страница Портфолио */
 
 /* Услуги компании */
+.service {
+  /* background-color: turquoise; */
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.service-main {
+  /* background-color: lightblue; */
+  width: 370px;
+  margin-bottom: 30px;
+}
+
+.service-main:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 
 .text-decoration {
   text-decoration: none;
 }
 
 .service-title {
+  margin-bottom: 4px;
+
   color: var(--title-text-color);
   font-size: 18px;
   font-weight: 700;
@@ -348,6 +538,8 @@ ul {
 }
 
 .service-description {
+  margin-top: 4px;
+
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.8;
