--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,20 @@ ul {
 .hero {
   background-color: #2f303a;
   text-align: center;
+  padding-top: 200px;
+  padding-right: 0;
+  padding-bottom: 200px;
+  padding-left: 0;
 }
+
+.hero-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .hero-title {
   margin-left: auto;
   margin-right: auto;
@@ -359,7 +372,7 @@ ul {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 94px;
+  /* padding-top: 94px; */
   padding-bottom: 50px;
 
   text-align: center;
@@ -435,6 +448,14 @@ ul {
 
 /* Футер */
 
+.footer-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .footer-section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -462,6 +483,7 @@ ul {
 }
 
 .address {
+  display: block;
   margin-top: 20px;
   padding-bottom: 0;
   margin-bottom: 0;
