--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ ul {
 }
 
 .team-container {
-  padding-top: 10px;
+  padding-top: 30px;
   padding-bottom: 30px;
 
   border-bottom-left-radius: 4px;
@@ -363,7 +363,6 @@ ul {
 
 .team-title {
   margin: 0 0 0 0;
-  margin-top: 30px;
   margin-bottom: 10px;
 
   font-size: 16px;
@@ -470,12 +469,7 @@ ul {
 
 /* Кнопки для портфолио */
 .container-button {
-  padding-top: 94px;
-
   justify-content: center;
-  align-items: center;
-
-  width: 1200px;
 }
 
 .button-portfolio {
@@ -484,7 +478,6 @@ ul {
   border-radius: 4px;
   padding: 6px 22px;
   min-width: 73px;
-  margin-right: 8px;
 
   background-color: var(--accent-color);
   color: var(--second-accent-color);
@@ -496,25 +489,34 @@ ul {
   cursor: pointer;
 }
 
+.button-li:not(:last-child) {
+  margin-right: 8px;
+}
+
 /* Услуги компании */
 
 .service {
   /* background-color: turquoise; */
   margin-top: 50px;
-  margin-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .service-main {
   /* background-color: lightblue; */
   width: 370px;
   margin-bottom: 30px;
+  margin-right: 30px;
+  /* max-width: 370px; */
+  max-width: calc((100%-66px) / 3);
 }
 
 .service-main:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.service-main:nth-child(3n) {
+  margin-right: 0;
 }
 
 .text-decoration {
@@ -527,6 +529,7 @@ ul {
 }
 
 .service-title {
+  margin-top: 0;
   margin-bottom: 4px;
 
   color: var(--title-text-color);
@@ -537,7 +540,8 @@ ul {
 }
 
 .service-description {
-  margin-top: 4px;
+  margin-top: 0;
+  margin-bottom: 0;
 
   color: var(--primary-text-color);
   font-size: 16px;
